tests/ui/attributes/z-crate-attr/injection.stderr
error: unexpected closing delimiter: `]`
  --> <crate attribute>:1:19
   |
LL | feature(yeet_expr)]fn main(){}#[inline
   |                   ^ unexpected closing delimiter

error: aborting due to 1 previous error

